[project]
name = "zarrinmehr_data_utils"
version = "0.1.0"
description = "Personal utilities for data engineering"
authors = [{ name = "Alireza Zarrinmehr" }]
dependencies = ["pandas", "boto3", "pyodbc", "tqdm"]
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
